tests/fixtures/coflow/invalid/parse/yield-from-missing-value.cf
co fn main() {
  yield from
}
